# stoik

./: .gitignore  LICENSE  README.md  agents.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml
stoic/: __init__.py  buffer.py  loop.py  metrics.py  snapshot.py  store.py
stoic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
stoic/server/: __init__.py  api.py  cache.py  flight.py  proxy.py
stoic/storage/: __init__.py  _protocol.py  duckdb.py
stoic/stream/: __init__.py  _protocol.py  kafka.py
stoik/: __init__.py  loop.py  snapshot.py  store.py
stoik/server/: __init__.py  _protocol.py  api.py  cache.py  flight.py  flight_pool.py  proxy.py
stoik/storage/: __init__.py  _protocol.py  duckdb.py  snapshot.py
stoik/stream/: __init__.py  _protocol.py  kafka.py
