[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "stoic"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["duckdb", "pyarrow", "structlog", "confluent-kafka"]

[project.optional-dependencies]
flight = ["flightsql-dbapi", "protobuf"]

[tool.setuptools.packages.find]
include = ["stoic*"]
