[metadata]
name = stoic
version = 0.1.0

[options]
packages = find:
python_requires = >=3.10
install_requires =
    duckdb
    pyarrow
    structlog

[options.extras_require]
kafka = confluent-kafka
flight = flightsql-dbapi; protobuf
all = confluent-kafka; flightsql-dbapi; protobuf

[options.packages.find]
include = stoic*
